--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -56,10 +56,9 @@ jobs:
             # Unique key of your project. You can find it in SonarQube > [my project] > Project Information (top-right menu)
             # mandatory
             -Dsonar.projectKey=template-python
-            # Comma-separated paths to directories containing main source files.
-            #-Dsonar.sources=. # optional, default is project base directory
+            -Dsonar.sources=. # optional, default is project base directory
             # When you need the analysis to take place in a directory other than the one from which it was launched
-            -Dsonar.projectBaseDir=. # optional, default is .
+            #-Dsonar.projectBaseDir=. # optional, default is .
             # Comma-separated paths to directories containing test source files.
             #-Dsonar.tests= # optional. For more info about Code Coverage, please refer to https://docs.sonarcloud.io/enriching/test-coverage/overview/
             # Adds more detail to both client and server-side analysis logs, activating DEBUG mode for the scanner, and adding client-side environment variables and system properties to the server-side log of analysis report processing.
