--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectKey=template-python
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
 sonar.sources=.
 sonar.python.coverage.reportPaths=coverage.xml
-sonar.sources=lib/
+#sonar.sources=lib/
 sonar.test.exclusions=tests/**
 sonar.tests=tests/
 sonar.verbose=true
