--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -28,8 +28,8 @@ jobs:
 
       - name: Set New Code Period
         env:
-        SONARQUBE_URL: ${{ secrets.SONAR_HOST_URL }} #https://seu-sonarqube.com  # Substitua pelo URL do seu servidor SonarQube
-        SONARQUBE_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }} #https://seu-sonarqube.com  # Substitua pelo URL do seu servidor SonarQube
+        SONAR_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
         PROJECT_KEY: ${{ GITHUB_REPOSITORY }}  # Substitua pelo key do seu projeto no SonarQube
         FROM_DATE: ${{ steps.set_date.outputs.date }}
         TO_DATE: ${{ steps.set_date.outputs.date }}
