--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -27,7 +27,7 @@ jobs:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       - name: Set New Code Period
-        uses: sonarsource/sonarqube-scan-action@master
+        #uses: sonarsource/sonarqube-scan-action@master
         env:
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }} #https://seu-sonarqube.com  # Substitua pelo URL do seu servidor SonarQube
         SONAR_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
