--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -25,19 +25,16 @@ jobs:
       #   env:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-      - name: Set New Code Period
-        uses: sonarsource/sonarqube-scan-action@master
-        env:
-        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }} #https://seu-sonarqube.com  # Substitua pelo URL do seu servidor SonarQube
-        SONAR_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
-        PROJECT_KEY: ${{ GITHUB_REPOSITORY }}  # Substitua pelo key do seu projeto no SonarQube
-        FROM_DATE: ${{ steps.set_date.outputs.date }}
-        TO_DATE: ${{ steps.set_date.outputs.date }}
-        run: |
-          response=$(curl -s -X POST -H "Authorization: Bearer $SONARQUBE_TOKEN" "$SONARQUBE_URL/api/new_code_periods/set?project=$PROJECT_KEY&from=$FROM_DATE&to=$TO_DATE")
-          echo "::set-output name=response::$reponse"
-          echo "::set-output name=success::true"
-          echo "Resposta: $response"
+        #SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }} #https://seu-sonarqube.com  # Substitua pelo URL do seu servidor SonarQube
+        #SONAR_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
+          PROJECT_KEY: ${{ GITHUB_REPOSITORY }}  # Substitua pelo key do seu projeto no SonarQube
+          FROM_DATE: ${{ steps.set_date.outputs.date }}
+          TO_DATE: ${{ steps.set_date.outputs.date }}
+          run: |
+            response=$(curl -s -X POST -H "Authorization: Bearer $SONARQUBE_TOKEN" "$SONARQUBE_URL/api/new_code_periods/set?project=$PROJECT_KEY&from=$FROM_DATE&to=$TO_DATE")
+            echo "::set-output name=response::$reponse"
+            echo "::set-output name=success::true"
+            echo "Resposta: $response"
       
       - name: Print Response
         id: set_data
