--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -25,9 +25,9 @@ jobs:
       #   env:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-        #SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }} #https://seu-sonarqube.com  # Substitua pelo URL do seu servidor SonarQube
-        #SONAR_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
-          PROJECT_KEY: ${{ GITHUB_REPOSITORY }}  # Substitua pelo key do seu projeto no SonarQube
+          #SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }} #https://seu-sonarqube.com  # Substitua pelo URL do seu servidor SonarQube
+          #SONAR_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
+          #PROJECT_KEY: ${{ GITHUB_REPOSITORY }}  # Substitua pelo key do seu projeto no SonarQube
           FROM_DATE: ${{ steps.set_date.outputs.date }}
           TO_DATE: ${{ steps.set_date.outputs.date }}
           run: |
