--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  build:
+  job1:
     name: SonarQube Code
     runs-on: ubuntu-latest
     steps:
@@ -24,7 +24,7 @@ jobs:
         #   timeout-minutes: 5
         #   env:
         #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
+  job2:
     name:  New Code Period
     runs-on: ubuntu-latest
     steps:
