--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -15,8 +15,8 @@ jobs:
             fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
         - uses: sonarsource/sonarqube-scan-action@master
           env:
-            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
             SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}  
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
         # If you wish to fail your job when the Quality Gate is red, uncomment the
         # following lines. This would typically be used to fail a deployment.
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - name: Set New Code Period
-        #uses: sonarsource/sonarqube-scan-action@master
+          uses: sonarsource/sonarqube-scan-action@master
           env:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}   
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
