--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -28,8 +28,7 @@ jobs:
     name:  New Code Period
     runs-on: ubuntu-latest
     steps:
-        - name: Set New Code Period
-          uses: sonarsource/sonarqube-scan-action@master
+        - uses: sonarsource/sonarqube-scan-action@master
           env:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}   
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
